Adicionando navbar e alterando rota padrão para a pagina de produtos

--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -3,6 +3,9 @@
         <meta charset="utf-8"</meta>
     </head>
     <body>
+
+        <%= nav_bar brand:"Produtos", brand_link:root_url %>
+
         <table class="table table-bordered">
             <thead>
                 <th>Produtos</th>
