--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= nav_bar brand:"Produtos", brand_link:root_url %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
