--- a/app/views/produtos/cadastro.html.erb
+++ b/app/views/produtos/cadastro.html.erb
@@ -1,45 +1,41 @@
-<html>
-    <head></head>
-    <body>
-
-        <div class="container">
-            <div class="row">
-                <h2>Cadastro de Produtos</h2>
+<div class="row">
+    <h2>Cadastro de Produtos</h2>
+</div>
+<%= form_for Produto.new do |f| %>
+    <div class=row>
+        <div class=form-group>
+            <div class=col-sm-12>
+                <%= f.label :nome %>
+                <%= f.text_field :nome, class: 'form-control' %>
             </div>
-            <%= form_for Produto.new do |f| %>
-                <div class=row>
-                    <div class=col-sm-12>
-                        <label>Nome</label>
-                        <input class="form-control" type="text" name="produto[nome]" id="nome">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class=col-sm-12>
-                        <label>Descrição</label>
-                        <textarea class="form-control" rows="4" name="produto[descricao]" id="descricao"> </textarea>
-                    </div>
-                </div>
-                <div class="row"> 
-                    <div class="col-sm-6">
-                        <label>Quantidade</label>
-                        <input class="form-control" type="number" min="0" value="0" name="produto[quantidade_estoque]" id="quantidade">
-                    </div>
-                    
-                    <div class="col-sm-6">
-                        <label>Preço</label>
-                        <input class="form-control" type="number" min="0" step="0.01" name="produto[preco]" id="preco">
-                    </div>
-                </div>
-                <div class="row" style="margin-top:15px;">
-                    <div class="col-sm-2">
-                        <div class="form-group">
-                            <button class="btn btn-success" type="submit">Cadastrar</button>
-                        </div>
-                    </div>
-                </div>
-            <% end %>
         </div>
-
-    </body>
-
-</html>
+    </div>
+    <div class="row">
+        <div class=form-group>
+            <div class=col-sm-12>
+                <%= f.label :descricao %>
+                <%= f.text_area :descricao, class: 'form-control', rows: 4 %>
+            </div>
+        </div>
+    </div>
+    <div class="row"> 
+        <div class=form-group>
+            <div class="col-sm-6">
+                <%= f.label :quantidade_estoque %>
+                <%= f.number_field :quantidade_estoque, step: 1, class: 'form-control' %>
+            </div>
+            
+            <div class="col-sm-6">
+                <%= f.label :preco%>
+                <%= f.number_field :preco, class: 'form-control' %>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin-top:15px;">
+        <div class="col-sm-2">
+            <div class="form-group">
+                <%= f.submit "Cadastrar", class: 'btn btn-primary'%>
+            </div>
+        </div>
+    </div>
+<% end %>
