--- a/app/views/produtos/busca.html.erb
+++ b/app/views/produtos/busca.html.erb
@@ -9,7 +9,7 @@
                 <th>Remover</th>
             </thead>
             <tbody>
-                <% @listaProduto.each do |produto| %>
+                <% @produtos.each do |produto| %>
                 <tr>
                     <td><%= produto.nome %></td>
                     <td><%= produto.descricao %></td>
