Alterando o método de busca para get

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <%= nav_bar brand:"Produtos", brand_link: root_url do %>
-      <%= form_tag busca_produto_path, class: "navbar-form navbar-right" do %>
+      <%= form_tag busca_produto_path, method: :get, class: "navbar-form navbar-right" do %>
         <div class="form-group">
           <%= text_field_tag :nome, @nome_buscado, class: "form-control" %>
           <%= button_to "Buscar", nil, class: "btn btn-default" %>
