--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,5 +1,10 @@
 <div class="row">
     <div class="cols-sm-12">
+
+        <% if flash[:notice] %>
+            <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
+        <% end %>
+
         <table class="table table-bordered">
             <thead>
                 <th>Nome</th>
