--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -14,17 +14,7 @@
                 <th>Remover</th>
             </thead>
             <tbody>
-                <% @listaProduto.each do |produto| %>
-                <tr>
-                    <td><%= produto.nome %></td>
-                    <td><%= produto.descricao %></td>
-                    <td><%= produto.preco %></td>
-                    <td><%= produto.quantidade_estoque %></td>
-                    <td><%= button_to "Remover", produto, method: :delete,
-                                                class: "btn btn-danger",
-                                                data: {confirm: "Deseja remover #{produto.nome}?"} %></td>
-                </tr>
-                <% end %>
+                <%= render @listaProduto %>
             </tbody>
         </table>
         <%= link_to "Cadastrar novo produto", new_produto_path %>
