Finalizando curso - Adicionada edição dos produtos

--- a/app/views/produtos/_produto.html.erb
+++ b/app/views/produtos/_produto.html.erb
@@ -6,4 +6,5 @@
     <td><%= button_to "Remover", produto, method: :delete,
                                 class: "btn btn-danger",
                                 data: {confirm: "Deseja remover #{produto.nome}?"} %></td>
+    <td><%= link_to "Alterar", edit_produto_path(produto), class: "btn btn-default" %></td>
 </tr>
