--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -12,6 +12,7 @@
                 <th>Preço</th>
                 <th>Quantidade</th>
                 <th>Remover</th>
+                <th>Alterar</th>
             </thead>
             <tbody>
                 <%= render @listaProduto %>
