--- a/app/views/produtos/busca.html.erb
+++ b/app/views/produtos/busca.html.erb
@@ -7,6 +7,7 @@
                 <th>Preço</th>
                 <th>Quantidade</th>
                 <th>Remover</th>
+                <th>Alterar</th>
             </thead>
             <tbody>
                 <%= render @produtos %>
